Merged forge gradle scripts, fixed refmap gen
{skip_ping}